--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>法律新媒体</title>
   <meta name="description" content="法律新媒体：影视、时政、论坛、社区、在线回答、法律时效、律师推广">
-  <link rel="stylesheet" href="KnowHowLegalCircle/styles.css">
+  <link rel="stylesheet" href="/KnowHowLegalCircle/styles.css">
 </head>
 <body>
   <header class="site-header">
@@ -32,6 +32,7 @@
     </div>
   </footer>
 
-  <script src="KnowHowLegalCircle/app.js"></script>
+  <script src="/KnowHowLegalCircle/app.js"></script>
 </body>
+
 </html> 
